--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "next": "14.0.1",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -20,6 +20,6 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "swc": "^1.0.11",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.1"
   }
 }
